--- a/渠道管理.md
+++ b/渠道管理.md
@@ -16,7 +16,9 @@
 >`province`:"1"  //string  省               <br/>
 >`city`:"1"  //string  市               <br/>
 >`area`:"1"  //string  区               <br/>
+
 **请求参数**
+
 ``` json
 {
   "params": {上面的过滤条件}
@@ -27,6 +29,7 @@
   "token": "string"
 }
 ```
+
 **响应示例**
 
 ``` json
@@ -64,13 +67,13 @@
 >/agent/get
 
 **请求参数**
+
 ``` json
 {
-  "params": 
-{ 
+  "params":  { 
   "id": 10  //渠道id
-}
- ,"token": "string"
+    },
+  "token": "string"
 }
 ```
 
@@ -82,20 +85,20 @@
      "msg":"success",
      "data":{
            "id": 15,
-                  "name": "分局1",
-                  "logo": "/xxxx.jpg",
-                  "contactName": "zhangsan",
-                  "contactTel": "134545421585",
-                  "contactEmail": null,
-                  "province": "湖北省",
-                  "city": "武汉市",
-                  "area": "洪山区",
-                  "status": "enable",
-                  "type": "direct",
-                  "createTime": null,
-                  "logoImgCN": "http://119.23.172.36:8089/xxxx.jpg",
-                  "statusCN": "启用",
-                  "typeCN": "直营"
+           "name": "分局1",
+           "logo": "/xxxx.jpg",
+           "contactName": "zhangsan",
+           "contactTel": "134545421585",
+           "contactEmail": null,
+           "province": "湖北省",
+           "city": "武汉市",
+           "area": "洪山区",
+           "status": "enable",
+           "type": "direct",
+           "createTime": null,
+           "logoImgCN": "http://119.23.172.36:8089/xxxx.jpg",
+           "statusCN": "启用",
+           "typeCN": "直营"
       }
 }
 ```
@@ -103,11 +106,12 @@
 ## 3.新增渠道
 
 **URL**
-
 >/agent/save
 
+**参数**
+
 >`name`:"xx"  //string 必填  渠道名称,    <br/>
->`status`:"enable"  //string 必填 '渠道状态' disable 关闭  enable 开启 ,
+>`status`:"enable"  //string 必填 '渠道状态' disable 关闭  enable 开启 ,<br/> 
 > `type`: "direct"  //string 必填 '渠道类型' direct 直营  not_direct 非直营,   <br/> 
 >`contactName`:"xx"  //string 必填  渠道联系人                  <br/>
 >`contactTel`:"1"  //string 必填  渠道联系电话                <br/>
@@ -117,24 +121,26 @@
 >`area`:"1"  //string 必填  区              <br/>
 >`logo`："E:/xxx/xx.jpg" //string 必填  '封面',
 
-**请求参数**
+**请求**
+
 ``` json
 {
-  "params": 
-{
-	上面参数
+  "params": {
+	     上面参数
+      },
+  "token": "string"
 }
-	,"token": "string"
-}
- ```
+```
+ 
  **响应示例**
- ``` json
+ 
+``` json
  {
    "code": 1,
    "msg": "success",
    "data": null
  }
- ```
+```
  
  ## 4.编辑渠道
  
@@ -151,17 +157,19 @@
  >`city`:"1"  //string 必填  市               <br/>
  >`area`:"1"  //string 必填  区               <br/>
  >`logo`："E:/xxx/xx.jpg" //string 非必填  '封面',
+ 
  **请求参数**
- ``` json
+ 
+``` json
  {
-   "params": 
- {
+   "params":  {
              上面参数
+         },
+   "token": "string"
  }
- 	,"token": "string"
- }
-  ```
+```
 **响应示例**
+
 ``` json
 {
   "code": 1,
@@ -174,16 +182,17 @@
  >/agent/delete
  
 **请求参数**
- ``` json
+
+``` json
  {
-   "params": 
- {
+   "params": {
      `id`："10"  //int  '主键',	    
+      },
+   "token": "string"
  }
- 	,"token": "string"
- }
-  ```
+```
 **响应示例**
+
 ``` json
 {
   "code": 1,
@@ -196,16 +205,17 @@
  >/agent/close
 
 **请求参数**
- ``` json
+
+``` json
  {
-   "params": 
- {
+   "params": {
      `id`："10"  //int  '主键',	    
+        },
+   "token": "string"
  }
- 	,"token": "string"
- }
-  ```
+```
 **响应示例**
+
 ``` json
 {
   "code": 1,
@@ -218,17 +228,18 @@
  >/agent/set
 
 **请求参数**
- ``` json
+
+``` json
  {
-   "params": 
- {
+   "params":  {
      `agnetId`："10"  //int  渠道编号 '主键',
      `ids`:[1,5,3]  // List<Integer> 门店编号集合
+      },
+   "token": "string"
  }
- 	,"token": "string"
- }
-  ```
+```
 **响应示例**
+
 ``` json
 {
   "code": 1,
@@ -244,17 +255,18 @@
  >/agent/delShop
 
 **请求参数**
- ``` json
+
+``` json
  {
-   "params": 
- {
+   "params":{
      `agnetId`："10"  //int  渠道编号 '主键',
      `ids`:[1,5,3]  // List<Integer> 门店编号集合
+        },
+   "token": "string"
  }
- 	,"token": "string"
- }
-  ```
+```
 **响应示例**
+
 ``` json
 {
   "code": 1,
