--- a/渠道管理.md
+++ b/渠道管理.md
@@ -1,4 +1,4 @@
-**本文档接口提交方式统一为：POST**
+**本文档接口提交方式统一为:POST**
 
 ## 1.获取渠道分页列表
 
@@ -119,7 +119,7 @@
 >`province`:"1"  //string 必填  省               <br/>
 >`city`:"1"  //string 必填  市               <br/>
 >`area`:"1"  //string 必填  区              <br/>
->`logo`："E:/xxx/xx.jpg" //string 必填  '封面',
+>`logo`:"E:/xxx/xx.jpg" //string 必填  '封面',
 
 **请求**
 
@@ -156,7 +156,7 @@
  >`province`:"1"  //string 必填  省               <br/>
  >`city`:"1"  //string 必填  市               <br/>
  >`area`:"1"  //string 必填  区               <br/>
- >`logo`："E:/xxx/xx.jpg" //string 非必填  '封面',
+ >`logo`:"E:/xxx/xx.jpg" //string 非必填  '封面',
  
  **请求参数**
  
@@ -186,7 +186,7 @@
 ``` json
  {
    "params": {
-     `id`："10"  //int  '主键',	    
+     `id`:"10"  //int  '主键',	    
       },
    "token": "string"
  }
@@ -209,7 +209,7 @@
 ``` json
  {
    "params": {
-     `id`："10"  //int  '主键',	    
+     `id`:"10"  //int  '主键',	    
         },
    "token": "string"
  }
@@ -232,7 +232,7 @@
 ``` json
  {
    "params":  {
-     `agnetId`："10"  //int  渠道编号 '主键',
+     `agnetId`:"10"  //int  渠道编号 '主键',
      `ids`:[1,5,3]  // List<Integer> 门店编号集合
       },
    "token": "string"
@@ -259,7 +259,7 @@
 ``` json
  {
    "params":{
-     `agnetId`："10"  //int  渠道编号 '主键',
+     `agnetId`:"10"  //int  渠道编号 '主键',
      `ids`:[1,5,3]  // List<Integer> 门店编号集合
         },
    "token": "string"
