--- a/门店管理.md
+++ b/门店管理.md
@@ -1,14 +1,14 @@
-**本文档接口提交方式统一为：POST**
+**本文档接口提交方式统一为:POST**
 
 ## 1.获取门店分页列表 ##
 
 **URL**
 >/shop/page
 
-**过滤条件：**
+**过滤条件:**
 
 >"name":"武商量贩"  //string  门店名称,    <br/>
->"contactName"："赵四"   //string  责任人姓名'',   <br/>
+>"contactName":"赵四"   //string  责任人姓名'',   <br/>
 >"contactTel":"xx"  //string  '门店电话'   ,               <br/>
 >"businessType":"1"  //string  '门店业务类型' ,              <br/>
 >"address":"1"  //string '门店地址' ,              <br/>
@@ -37,15 +37,15 @@
     "total": 1,   //int 总条数
     "list": [
       {
-          "id"："1"  //int  '主键',
+          "id":"1"  //int  '主键',
           "name":"xx"  //string  ‘门店名称’,
-          "logo"："E:/xxx/xx.jpg" //string  '封面',
+          "logo":"E:/xxx/xx.jpg" //string  '封面',
           "contactName":"张三" //string  '门店联系人',
           "contactTel":"135458546485"  //string   '门店电话',
           "contactEmail":"460852721@qq.ocm "   // string  '门店邮箱',
           "status":"1"  //int '门店状态',
           "businessType":"2"  //int '门店类型',
-          "createDate"："2018-05-20"   //date  '门店注册时间',
+          "createDate":"2018-05-20"   //date  '门店注册时间',
           "detail":  '主要产品有  xx ,yy,kk等'  //string '店铺简介',           
           "address":  '武汉市洪山区街道口'  //string '店铺地址',           
           "level":  3  //int '店铺等级',            
@@ -78,15 +78,15 @@
      "code":1,
      "msg":"success",
      "data":{
-            "id"："1"  //int  '主键',
+            "id":"1"  //int  '主键',
              "name":"xx"  //string  ‘门店名称’,
-             "logo"："E:/xxx/xx.jpg" //string  '封面',
+             "logo":"E:/xxx/xx.jpg" //string  '封面',
              "contactName":"张三" //string  '门店联系人',
              "contactTel":"135458546485"  //string   '门店电话',
              "contactEmail":"460852721@qq.ocm "   // string  '门店邮箱',
              "status":"1"  //int '门店状态',
              "businessType":"2"  //int '门店类型',
-             "createDate"："2018-05-20"   //date  '门店注册时间',
+             "createDate":"2018-05-20"   //date  '门店注册时间',
              "idCardNo":  124515444512  //string '身份证号',           
              "idCardFront":  ''  //string '身份证正面',   
              "idCardback":  ''  //string '身份证背面',           
@@ -111,7 +111,7 @@
 **参数**
 
 >"name":"xx"  //string   必填‘门店名称’, <br/>
->"logo"："E:/xxx/xx.jpg" //string  非必填  '封面', <br/>
+>"logo":"E:/xxx/xx.jpg" //string  非必填  '封面', <br/>
 >"contactName":"张三" //string   必填  '门店联系人', <br/>
 >"contactTel":"135458546485"  必填  //string   '门店电话', <br/>
 >"contactEmail":"460852721@qq.ocm "  必填   // string  '门店邮箱', <br/>
@@ -152,7 +152,7 @@
  **参数**
  
  >"name":"xx"  //string   必填‘门店名称’, <br/>
- >"logo"："E:/xxx/xx.jpg" //string  非必填  '封面', <br/>
+ >"logo":"E:/xxx/xx.jpg" //string  非必填  '封面', <br/>
  >"contactName":"张三" //string   必填  '门店联系人', <br/>
  >"contactTel":"135458546485"  必填  //string   '门店电话', <br/>
  >"contactEmail":"460852721@qq.ocm "  必填   // string  '门店邮箱', <br/>
@@ -193,7 +193,7 @@
 ``` json
  {
    "params": {
-     "id"："10"  //int  '主键',	    
+     "id": "10"     //int  门店编号,    
        },
  	"token": "string"
  }
@@ -215,7 +215,7 @@
 ``` json
  {
    "params": {
-     "id"："10"  //int  '主键',	    
+     "id":  "10"  //int  门店编号,	    
        },
        "token": "string"
  }
@@ -241,7 +241,7 @@
 ``` json
 {
   "params": {
-    "agentId": 5 //int 非必填 渠道编号
+    "agentId":  5          //int 非必填 渠道编号
   },
   "token": "string"
 }
@@ -256,15 +256,15 @@
   "data": {
     "list": [
       {
-          "id"："1"  //int  '主键',
+          "id":"1"  //int  '主键',
           "name":"xx"  //string  ‘门店名称’,
-          "logo"："E:/xxx/xx.jpg" //string  '封面',
+          "logo":"E:/xxx/xx.jpg" //string  '封面',
           "contactName":"张三" //string  '门店联系人',
           "contactTel":"135458546485"  //string   '门店电话',
           "contactEmail":"460852721@qq.ocm "   // string  '门店邮箱',
           "status":"1"  //int '门店状态',
           "businessType":"2"  //int '门店类型',
-          "createDate"："2018-05-20"   //date  '门店注册时间',
+          "createDate":"2018-05-20"   //date  '门店注册时间',
           "detail":  '主要产品有  xx ,yy,kk等'  //string '店铺简介',           
           "address":  '武汉市洪山区街道口'  //string '店铺地址',           
           "level":  3  //int '店铺等级',            
