--- a/门店管理.md
+++ b/门店管理.md
@@ -23,7 +23,7 @@
         },
         "page":{
         	    "pageNum": 1,                    必填  int  当前页面
-                "pageSize": 10                   必填  int  每页数量
+                    "pageSize": 10                   必填  int  每页数量
             },
         "token": ""                                 （必填）（str）
     }
@@ -52,7 +52,7 @@
           "collectQty":  2000  //in  '收藏数',                                
       }
              ]
-           }
+   }
 }
 ```
 
@@ -256,19 +256,19 @@
   "data": {
     "list": [
       {
-          "id":"1"  //int  '主键',
-          "name":"xx"  //string  ‘门店名称’,
-          "logo":"E:/xxx/xx.jpg" //string  '封面',
-          "contactName":"张三" //string  '门店联系人',
-          "contactTel":"135458546485"  //string   '门店电话',
-          "contactEmail":"460852721@qq.ocm "   // string  '门店邮箱',
-          "status":"1"  //int '门店状态',
-          "businessType":"2"  //int '门店类型',
-          "createDate":"2018-05-20"   //date  '门店注册时间',
-          "detail":  '主要产品有  xx ,yy,kk等'  //string '店铺简介',           
-          "address":  '武汉市洪山区街道口'  //string '店铺地址',           
-          "level":  3  //int '店铺等级',            
-          "collectQty":  2000  //in  '收藏数',                                
+          "id":"1" , //int  '主键'
+          "name":"xx" , //string  ‘门店名称’
+          "logo":"E:/xxx/xx.jpg", //string  '封面'
+          "contactName":"张三", //string  '门店联系人'
+          "contactTel":"135458546485" , //string   '门店电话'
+          "contactEmail":"460852721@qq.ocm " ,  // string  '门店邮箱'
+          "status":"1" , //int '门店状态'
+          "businessType":"2" , //int '门店类型'
+          "createDate":"2018-05-20" ,  //date  '门店注册时间'
+          "detail":  '主要产品有  xx ,yy,kk等',  //string '店铺简介'          
+          "address":  '武汉市洪山区街道口', //string '店铺地址'      
+          "level":  3 , //int '店铺等级'            
+          "collectQty":  2000  //int  '收藏数'                                
       }]
   }
 }
